# MusicMate

./: .gitignore  Makefile.am  README  README.md  configure.ac  meson.build
data/: meson.build  org.jensge.MusicMate.desktop  org.jensge.MusicMate.gresource.xml  org.jensge.MusicMate.gschema.xml
src/: Makefile  album-art-cache.vala  album-list-store.vala  album-tree-store.vala  album-view.vala  application.vala  audio-controls.vala  build-config.vapi  filtered-song-list.vala  main-window.vala  main.vala  media-keys.vala  meson.build  multimedia-keys.vala  notifier.vala  playmate-application.vala  song-browser.vala  song-list-store.vala  song-model-mixer.vala
