executable('musicmate',
    ['main.vala',
     'album-art-cache.vala',
     'album-list-store.vala',
     'album-view.vala',
     'song-list-store.vala',
     'song-browser.vala',
     'song-model-mixer.vala',
     'filtered-song-list.vala',
     'audio-controls.vala',
     'application.vala',
     'media-keys.vala',
     'main-window.vala',
     'notifier.vala'],
     dependencies : [gtk, gdk_pixbuf, gee, gstreamer, notify, tracker])
